# AzuriteLauncher

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: launch_minecraft.rs  lib.rs  main.rs  minecraft_download.rs  minecraft_manager.rs  minecraft_versions_control.rs  path_manager.rs
