[package]
name = "cubexlauncher"
version = "0.1.0"
description = "Minecraft Launcher"
authors = ["Menshov Anton"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cubexlauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.8.0"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
tokio = "1.52.1"
futures = "0.3.32"
zip = "8.6.0"
anyhow = "1.0.102"
directories = "6.0.0"
rayon = "1.12.0"

